--- a/americastyle.css
+++ b/americastyle.css
@@ -12,7 +12,7 @@ background-color : white ;
 padding:20px;
 border-bottom: 1px solid #fff ;
 justify-content : space-between;
-position : fixed ;
+]
 z-index:1;
 }
 .textInNavbar{
