--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 width : 100% ;
 height : 40px;
 display :flex ;
-background-color : white ;
+background-color : Red ;
 padding:20px;
 border-bottom: 1px solid #fff ;
 justify-content : space-between;
